force-app/main/default/objects/TranseraUser__c/TranseraUser__c.object-meta.xml
<CustomObject>
    <description>Transera User</description>
    <label>TranseraUser</label>
    <nameField>
        <label>TranseraUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TranseraUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>