force-app/main/default/objects/TranseraUser__c/fields/LoginName__c.field-meta.xml
<CustomField>
    <fullName>LoginName__c</fullName>
    <description>Transera Login Name</description>
    <externalId>true</externalId>
    <label>LoginName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>