force-app/main/default/objects/TranseraUser__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Transera User Password</description>
    <label>Password</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>