force-app/main/default/objects/TranseraUser__c/fields/SalesforceUsername__c.field-meta.xml
<CustomField>
    <fullName>SalesforceUsername__c</fullName>
    <description>Salesforce Username</description>
    <externalId>true</externalId>
    <label>SalesforceUsername</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>