force-app/main/default/objects/TranseraUser__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <description>Tenant Name</description>
    <label>Tenant</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>